--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,41 @@
-Hello
+<html>
+  <head>
+    <title>Marc Lindenbach</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/style.css">
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>MARC <strong>LINDENBACH</strong></h1>
+        <hr />
+      </header>
+      <nav>
+        <ul class="work">
+          <li><a href="rain/">Rain</a></li>
+          <li><a href="index.html" class="active">About</a></li>
+        </ul>
+      </nav>
+      <section class="about">
+        <div class="me"></div>
+        <div>
+          <h2>About</h2>
+          <ul class="about">
+            <li>Like to take pictures</li>
+            <li>Also VP of Technology at <a href="https://www.muzooka.com">Muzooka</a></li>
+          </ul>
+        </div>
+      </section>
+      <footer>
+        <ul class="links">
+          <li><a href="mailto:marc@lindenbach.ca">Email</a></li>
+          <li><a href="https://www.instagram.com/mwlindenbach/">Instagram</a></li>
+          <li><a href="https://github.com/marclindenbach">Github</a></li>
+          <li><a href="https://ca.linkedin.com/in/marc-lindenbach">LinkedIn</a></li>
+        </ul>
+      </footer>
+    </div>
+  </body>
+</html>
