--- a/public/rain/index.html
+++ b/public/rain/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="bbal.html" class="image main bball"></a>
+      <a href="bball.html" class="image main bball"></a>
       <a href="benches.html" class="image row-1 benches"></a>
       <a href="boat.html" class="image row-2 boat"></a>
       <a href="beach.html" class="image row-3 beach"></a>
