--- a/src/base.html
+++ b/src/base.html
@@ -3,8 +3,8 @@
     <title>Marc Lindenbach</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body>
     <div class="container">
@@ -14,20 +14,13 @@
       </header>
       <nav>
         <ul class="work">
-          <li><a href="rain/">Rain</a></li>
-          <li><a href="index.html" class="active">About</a></li>
+          <li><a href="/rain/">Rain</a></li>
+          <li><a href="/about.html">About</a></li>
         </ul>
       </nav>
-      <section class="about">
-        <div class="me"></div>
-        <div>
-          <h2>About</h2>
-          <ul class="about">
-            <li>Like to take pictures</li>
-            <li>Also VP of Technology at <a href="https://www.muzooka.com">Muzooka</a></li>
-          </ul>
-        </div>
-      </section>
+      <div class="content">
+        {{ content }}
+      </div>
       <footer>
         <ul class="links">
           <li><a href="mailto:marc@lindenbach.ca">Email</a></li>
