--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
   <div>
     <h2>About</h2>
     <ul class="about">
-      <li>Like to take pictures</li>
+      <li>I like to take pictures</li>
       <li>Also VP of Technology at <a href="https://www.muzooka.com">Muzooka</a></li>
     </ul>
   </div>
