--- a/src/base.html
+++ b/src/base.html
@@ -14,7 +14,7 @@
       </header>
       <nav>
         <ul class="work">
-          <li><a href="/rain/">Rain</a></li>
+          {{ galleries }}
           <li><a href="/about.html">About</a></li>
         </ul>
       </nav>
