Wrote watcher/server & added cache buster

--- a/src/base.html
+++ b/src/base.html
@@ -3,8 +3,8 @@
     <title>Marc Lindenbach</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/reset.css?{{ buster }}">
+    <link rel="stylesheet" href="/assets/style.css?{{ buster }}">
   </head>
   <body>
     <div class="container">
