added powerlines gallery

--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,8 @@
     <h2>About</h2>
     <ul class="about">
       <li>I like to take pictures</li>
+      <li>Full stack software developer</li>
+      <li>VP of Technology at <a href="https://www.muzooka.com">Muzooka</a></li>
     </ul>
   </div>
 </section>
