--- a/src/about.html
+++ b/src/about.html
@@ -4,8 +4,13 @@
     <h2>About</h2>
     <ul class="about">
       <li>I like to take pictures</li>
-      <li>Full stack software developer</li>
-      <li>VP of Technology at <a href="https://www.muzooka.com">Muzooka</a></li>
+      <li>YYC</li>
+    </ul>
+    <br />
+    <h2 class="about-links">Links</h2>
+    <ul class="about-links">
+      <li><a href="mailto:marc@lindenbach.ca">Email</a></li>
+      <li><a href="https://www.instagram.com/mwlindenbach/">Instagram</a></li>
     </ul>
   </div>
 </section>
