Extended sub logic

--- a/src/1p3l.html
+++ b/src/1p3l.html
@@ -1,6 +1,6 @@
 <div class="gallery-1p3l">
-  <a href="{{ link[0] }}" class="image main" style="background-image: url({{ image[0] }})"></a>
-  <a href="{{ link[1] }}" class="image row-1" style="background-image: url({{ image[1] }})"></a>
-  <a href="{{ link[2] }}" class="image row-2" style="background-image: url({{ image[2] }})"></a>
-  <a href="{{ link[3] }}" class="image row-3" style="background-image: url({{ image[3] }})"></a>
+  <a href="{{ link_0 }}" class="image main" style="background-image: url({{ image_0 }})"></a>
+  <a href="{{ link_1 }}" class="image row-1" style="background-image: url({{ image_1 }})"></a>
+  <a href="{{ link_2 }}" class="image row-2" style="background-image: url({{ image_2 }})"></a>
+  <a href="{{ link_3 }}" class="image row-3" style="background-image: url({{ image_3 }})"></a>
 </div>
