--- a/src/base.html
+++ b/src/base.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/reset.css?{{ buster }}">
     <link rel="stylesheet" href="/assets/style.css?{{ buster }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
     <div class="container">
