--- a/src/base.html
+++ b/src/base.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Marc Lindenbach</title>
+    <title>Marc Lindenbach - {{ subtitle }}</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/reset.css?{{ buster }}">
